--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -16,6 +16,17 @@
                     {{ comment.body }}
                 {% endif %}
             </div>
+            <div class="comment-footer">
+                {% if current_user == comment.author %}
+                    <a href="{{ url_for('.delete_comment', id=comment.id) }}">
+                        <span class="label label-danger">Delete</span>
+                    </a>
+                {% elif current_user.is_administrator() %}
+                    <a href="{{ url_for('.delete_comment', id=comment.id) }}">
+                        <span class="label label-danger">Delete [Admin]</span>
+                    </a>
+                {% endif %}
+            </div>
         </div>
     </li>
     {% endfor %}
